# DORGA

./: .gitignore  README.md  pyproject.toml  requirements.txt
GUNet/: GUNet_Utils.py  GUNet_model.py  utils.py
configs/: default.yaml  privateh.yaml
dorga/data/: __init__.py  dataset.py  pattern.py
dorga/losses/: __init__.py  losses.py
dorga/models/: __init__.py  backbone.py  classifier.py  dorga_model.py  graph_attention.py  patch_importance.py  pattern_prior.py  projectors.py  stn.py
dorga/preprocessing/: __init__.py  alignment.py  pipeline.py  segmentation.py
dorga/utils/: __init__.py  monitor.py  training.py  visualization.py
scripts/: inference.py  preprocess.py  test_brixia.py  test_cohen.py  train.py
