[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dorga"
version = "0.1.0"
description = "Decoupled Ordinal Refinement with Geometric Alignment for Chest X-ray Severity Scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "einops>=0.7.0",
    "albumentations>=1.3.0",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
]

[tool.setuptools.packages.find]
include = ["dorga*"]
